# BrainPy

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  ACKNOWLEDGMENTS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  README2.md  SECURITY.md  TODO.md  brainpy-changelog.md  brainpy-changelog.rst  brainpylib-changelog.md  changelog.md  changelog.rst  changes.md  conftest.py  prepare_build_wheel_on_cuda.sh  publishment.md  pyproject.toml  pytest_groups.py  readme.md  requirements-dev-raw.txt  requirements-dev.txt  requirements-doc.txt  requirements-win.txt  requirements.txt  setup.py  setup_cuda.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
brainpy/: __init__.py  _add_deprecations.py  _base.py  _base_test.py  _errors.py  _exponential.py  _inputs.py  _lif.py  _lif_test.py  _misc.py  _neuron.py  _neuron_test.py  _projection.py  _readout.py  _readout_test.py  _stp.py  _synapse.py  _synapse_test.py  _synaptic_projection.py  _synouts.py  _synouts_test.py  _version.py  access_methods_test.py  analysis.py  boost_misc_test.py  boost_runners_delay_test.py  channels.py  check.py  check_coverage_test.py  check_test.py  checkpoints.py  connect.py  context.py  delay.py  deprecations.py  deprecations_test.py  dnn.py  dyn.py  dyn_runner_test.py  dynsys.py  (+38 more)
brainpy_extensions/: CMakeLists.txt  README.md  changelog.rst  pyproject.toml  run.sh  setup.py  setup2.py  setup_cuda.py
brainpy_extensions/brainpylib/: __init__.py  _event_add.py  atomic_sum.py  event_sum.py  register_custom_calls.py
brainpy_extensions/brainpylib/tests/: test_atomic_sum.py  test_event_sum.py  test_event_sum2.py
brainpy_extensions/lib/: atomic_sum_cpu.cc  atomic_sum_cpu.h  atomic_sum_gpu.cc.cu  atomic_sum_gpu.h  cpu_ops.cc  event_add_cpu.cc  event_add_cpu.h  event_add_gpu_kernels.cc.cu  event_add_gpu_kernels.h  event_sum_cpu.cc  event_sum_cpu.h  event_sum_gpu.cc.cu  event_sum_gpu.cu  event_sum_gpu.h  event_sum_gpu_kernels.cc.cu  event_sum_gpu_kernels.h  gpu_event_add_kernels.cc.cu  gpu_event_add_kernels.h  gpu_ops.cc  kernel_helpers.h  kernel_helpers_gpu.h  pybind11_kernel_helpers.h
brainpylib/: CMakeLists.txt  pyproject.toml
brainpylib/lib/: operators.py
brainpylib/src/: cpu_ops.cc
develop/: NumericalMethods - SDE.ipynb  fast_synapse_computation2.ipynb
docker/: Dockerfile  requirements.txt
docs/: FAQ.rst  Makefile  README.md  advanced_tutorials.rst  api.rst  apis.rst  auto_generater.py  brain_dynamics_tutorials.rst  brainpy-changelog.md  checkpointing-en.ipynb  checkpointing-zh.ipynb  comparison_generator.py  conf.py  core_concepts.rst  highlight_test_lexer.py  implemented_jax_funcs.py  index.rst  issues-found-20260618.md  issues-found-20260619-analysis.md  issues-found-20260619-dnn.md  issues-found-20260619-dyn-neurons.md  issues-found-20260619-dyn-rates-base.md  issues-found-20260619-dyn-synapses.md  issues-found-20260619-dynold.md  issues-found-20260619-integrators-fde-pde.md  issues-found-20260619-integrators-ode-sde.md  issues-found-20260619-math-compat.md  issues-found-20260619-math-core.md  issues-found-20260619-math-object-transform.md  issues-found-20260619-math-sparse-event.md  issues-found-20260619-optim-losses.md  issues-found-20260619-small-modules.md  issues-found-20260619-toplevel-glue.md  issues-found-20260619-train-running.md  snn_simulation-zh.ipynb  snn_training-en.ipynb  spiking_neural_networks-en.ipynb  spiking_neural_networks-zh.ipynb  toolboxes.rst  tutorials.rst
docs_build/: conf.py
docs_classic/: index.rst
docs_experimental/: README.md  snn_simulation-en.ipynb  snn_training-zh.ipynb
docs_state/: apis.rst  index.rst  snn_simulation-en.ipynb  snn_simulation-zh.ipynb  snn_training-en.ipynb  snn_training-zh.ipynb
docs_state_based/: README.md  index.rst
docs_version2/: .readthedocs.yml  README.md  auto_generater.py  brainpy-changelog.md  conf.py  index.rst
examples/: 102_EI_net_1996.py  103_COBA_2005.py  106_COBA_HH_2007.py  107_gamma_oscillation_1996.py  108_synfire_chains_199.py  110_Susin_Destexhe_2021_gamma_oscillation_AI.py  111_Susin_Destexhe_2021_gamma_oscillation_CHING.py  112_Susin_Destexhe_2021_gamma_oscillation_ING.py  113_Susin_Destexhe_2021_gamma_oscillation_PING.py  201_surrogate_grad_lif_fashion_mnist.py  (+8 more)
extensions/: CMakeLists.txt  build_wheel_in_linux.sh  build_wheel_in_mac.sh  build_wheel_in_windows.sh  changelog.rst  run.sh  setup.py  setup_cuda.py  setup_mac.py
extensions/brainpylib/: __init__.py  atomic_prod.py  atomic_sum.py  cpu_op.py  event_prod.py  event_sum.py  register_custom_calls.py  utils.py
extensions/brainpylib/custom_op/: __init__.py  cpu.py  cuda.py  gpu.py  regis_op.py
extensions/brainpylib/custom_op/tests/: a.py
extensions/brainpylib/numba/: _cuda.py  cpu_op.py  gpu_op.py
extensions/brainpylib/operator/: __init__.py  _cuda.py  cpu_op.py  gpu_op.py
extensions/brainpylib/tests/: test_atomic_prod.py  test_atomic_prod_cpu.py  test_atomic_prod_gpu.py  test_atomic_sum.py  test_atomic_sum_gpu.py  test_coo_event_sum_gpu.py  test_csr_event_prod_cpu.py  test_csr_event_sum_cpu.py  test_csr_event_sum_gpu.py  test_event_prod.py  test_event_sum.py  test_event_sum2.py
extensions/fixed_wheels/: brainpylib-0.0.3-cp36-cp36m-macosx_10_9_x86_64.whl  brainpylib-0.0.3-cp37-cp37m-macosx_10_9_x86_64.whl  brainpylib-0.0.3-cp38-cp38-macosx_10_9_x86_64.whl  brainpylib-0.0.3-cp38-cp38-macosx_11_0_arm64.whl  brainpylib-0.0.3-cp39-cp39-macosx_10_9_x86_64.whl  brainpylib-0.0.3-cp39-cp39-macosx_11_0_arm64.whl
extensions/lib/: atomic_prod_cpu.cc  atomic_prod_cpu.h  atomic_prod_gpu.cu  atomic_prod_gpu.h  atomic_sum_cpu.cc  atomic_sum_cpu.h  atomic_sum_gpu.cu  atomic_sum_gpu.h  cpu_atomic_prod.cc  cpu_atomic_sum.cc  cpu_event_prod.cc  cpu_event_prod.h  cpu_event_sum.cc  cpu_event_sum.h  cpu_ops.cc  event_prod_cpu.cc  event_prod_cpu.h  event_sum_cpu.cc  event_sum_cpu.h  event_sum_gpu.cu  event_sum_gpu.h  gpu_atomic_prod.cu  gpu_atomic_sum.cu  gpu_event_sum.cu  gpu_event_sum.h  gpu_ops.cc  kernel_helpers.h  pybind11_kernel_helpers.h
(+3692 files in other folders)
