[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brainpy"
description = "BrainPy: Brain Dynamics Programming in Python"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "BrainPy Team", email = "chao.brain@qq.com" }
]
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
keywords = [
    "computational neuroscience",
    "brain-inspired computation",
    "brain modeling",
    "brain dynamics modeling",
    "brain dynamics programming"
]
dependencies = [
    "numpy>=1.15",
    "jax",
    "tqdm",
    "brainstate>=0.5.1",
    "brainunit>=0.2.0",
    "brainevent>=0.0.7",
    "braintools>=0.0.9",
    'brainpy_state>=0.0.3',
]

dynamic = ['version']


[project.urls]
"Bug Tracker" = "https://github.com/brainpy/BrainPy/issues"
"Documentation" = "https://brainpy.readthedocs.io/"
"Source Code" = "https://github.com/brainpy/BrainPy"

[project.optional-dependencies]
cpu = ["jax[cpu]", 'brainevent[cpu]']
cuda12 = ["jax[cuda12]", 'brainevent[cuda12]']
cuda13 = ["jax[cuda13]", 'brainevent[cuda13]']
tpu = ["jax[tpu]", 'brainevent[tpu]']

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
exclude = [
    "lib*",
    "dev*",
    "docs*",
    "tests*",
    "docker*",
    "examples*",
    "scripts",
    "images",
    "dist*",
    "bug*",
]

[tool.setuptools.dynamic]
version = { attr = "brainpy.__version__" }


[tool.coverage.run]
# Measure coverage of the library source only -- never of the test files
# themselves (a test file's lines are not "product code", and several
# co-located ``*_test.py`` files are intentionally disabled via a module-level
# ``pytest.skip`` and would otherwise inflate the denominator with dead lines).
omit = [
    "*_test.py",
    "*/tests/*",
    "brainpy/_version.py",
]

[tool.coverage.report]
omit = [
    "*_test.py",
    "*/tests/*",
    "brainpy/_version.py",
]
# Exclude only genuinely-unreachable-under-test lines. These are standard,
# defensible exclusions (not metric gaming): module ``__main__`` guards never
# run under pytest, ``TYPE_CHECKING`` blocks are import-time only, abstract
# methods and ``NotImplementedError`` stubs have no body to exercise.
exclude_also = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "def __repr__",
]
